Fix modal visibility

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -343,7 +343,6 @@ section.catalogo {
   width: 100vw;
   height: 100vh;
   background-color: rgba(0,0,0,0.8);
-  display: flex;
   align-items: center;
   justify-content: center;
   padding: 1rem;
